@@ -11,7 +11,6 @@ importFrom("combinat", "permn")
 export(
     group.p,
     convert.g,
-    ##ctplot,
     pamward,
     rowmode,
     seqplot.tentrop,
