@@ -1,10 +1,10 @@
 \name{TraMineRextras-package}
-\alias{TraMineRextras-package} 
-\alias{TraMineRextras} 
-\docType{package} 
-\title{ TraMineR Extension } 
-\description{ 
-(Version: 0.3.5) Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
+\alias{TraMineRextras-package}
+\alias{TraMineRextras}
+\docType{package}
+\title{ TraMineR Extension }
+\description{
+(Version: 0.3.7) Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
 
 }
 
@@ -35,4 +35,4 @@
 
 %## compute the LCS pairwise distance matrix ## among the first 10 sequences mvad.lcs <- seqdist(mvad.seq[1:10,], method="LCS") }
 
-\keyword{ package }
+\keyword{ package } 
